--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,23 @@
 .App {
+  min-height: 100% ;
+  position: relative;
   text-align: center;
 }
-
-.container {
-  margin-top:30px;
-}
-
-.jumbotron {
-  min-height: 70vh;
-}
-
-.bottomNav {
+.wrapper {
+  margin-top: 40px;
   text-align: left;
 }
 
 hr{
-  margin-top:5px;
+  position: relative;
+  padding-bottom:100px;
+}
+
+.footer {
+  position: relative;
+  margin-top: -100px;
+  /* negative value of footer height */
+  height: 100px;
+  clear: both;
+  text-align: center;
 }
